--- a/app/src/main/res/layout/activity_c_history.xml
+++ b/app/src/main/res/layout/activity_c_history.xml
@@ -138,9 +138,9 @@
                 android:id="@+id/imgView_history2"
                 android:layout_width="366dp"
                 android:layout_height="232dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="48dp"
                 app:layout_constraintEnd_toEndOf="@+id/imgView_history1"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/imgView_history1"
                 app:layout_constraintTop_toBottomOf="@id/imgView_history1" />
 
@@ -158,9 +158,9 @@
                 android:id="@+id/imgView_history4"
                 android:layout_width="369dp"
                 android:layout_height="238dp"
-                android:layout_marginTop="48dp"
+                android:layout_marginTop="56dp"
                 app:layout_constraintEnd_toEndOf="@+id/imgView_history3"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.545"
                 app:layout_constraintStart_toStartOf="@+id/imgView_history3"
                 app:layout_constraintTop_toBottomOf="@id/imgView_history3" />
 
@@ -204,63 +204,63 @@
 
             <TextView
                 android:id="@+id/txtView_history1"
-                android:layout_width="0dp"
-                android:layout_height="20dp"
+                android:layout_width="370dp"
+                android:layout_height="39dp"
                 android:layout_marginTop="8dp"
+                android:gravity="center_horizontal"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/imgView_history1"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="@+id/imgView_history1"
-                app:layout_constraintTop_toBottomOf="@id/imgView_history1"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                android:textAlignment="center"
-                android:gravity="center_horizontal" />
+                app:layout_constraintTop_toBottomOf="@id/imgView_history1" />
 
             <TextView
                 android:id="@+id/txtView_history2"
-                android:layout_width="360dp"
-                android:layout_height="34dp"
+                android:layout_width="362dp"
+                android:layout_height="37dp"
                 android:layout_marginTop="8dp"
+                android:gravity="center_horizontal"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/imgView_history2"
                 app:layout_constraintHorizontal_bias="0.444"
                 app:layout_constraintStart_toStartOf="@+id/imgView_history2"
-                app:layout_constraintTop_toBottomOf="@id/imgView_history2"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                android:textAlignment="center"
-                android:gravity="center_horizontal"/>
+                app:layout_constraintTop_toBottomOf="@id/imgView_history2" />
 
             <TextView
                 android:id="@+id/txtView_history3"
-                android:layout_width="363dp"
-                android:layout_height="24dp"
+                android:layout_width="367dp"
+                android:layout_height="38dp"
                 android:layout_marginTop="12dp"
+                android:gravity="center_horizontal"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/imgView_history3"
                 app:layout_constraintHorizontal_bias="0.7"
                 app:layout_constraintStart_toStartOf="@+id/imgView_history3"
-                app:layout_constraintTop_toBottomOf="@id/imgView_history3"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                android:textAlignment="center"
-                android:gravity="center_horizontal"/>
+                app:layout_constraintTop_toBottomOf="@id/imgView_history3" />
 
             <TextView
                 android:id="@+id/txtView_history4"
-                android:layout_width="0dp"
-                android:layout_height="29dp"
+                android:layout_width="369dp"
+                android:layout_height="42dp"
                 android:layout_marginTop="4dp"
-                app:layout_constraintEnd_toEndOf="@+id/imgView_history4"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/imgView_history4"
-                app:layout_constraintTop_toBottomOf="@id/imgView_history4"
+                android:gravity="center_horizontal"
+                android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 android:textStyle="bold"
-                android:textAlignment="center"
-                android:gravity="center_horizontal"/>
+                app:layout_constraintEnd_toEndOf="@+id/imgView_history4"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/imgView_history4"
+                app:layout_constraintTop_toBottomOf="@id/imgView_history4" />
 
             <TextView
                 android:id="@+id/txtView_history5"
