--- a/app/src/main/res/layout/activity_c_history.xml
+++ b/app/src/main/res/layout/activity_c_history.xml
@@ -264,31 +264,31 @@
 
             <TextView
                 android:id="@+id/txtView_history5"
-                android:layout_width="362dp"
-                android:layout_height="38dp"
+                android:layout_width="364dp"
+                android:layout_height="47dp"
                 android:layout_marginTop="5dp"
-                app:layout_constraintEnd_toEndOf="@+id/imgView_history5"
-                app:layout_constraintStart_toStartOf="@+id/imgView_history5"
-                app:layout_constraintTop_toBottomOf="@id/imgView_history5"
+                android:gravity="center_horizontal"
+                android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 android:textStyle="bold"
-                android:textAlignment="center"
-                android:gravity="center_horizontal"/>
+                app:layout_constraintEnd_toEndOf="@+id/imgView_history5"
+                app:layout_constraintStart_toStartOf="@+id/imgView_history5"
+                app:layout_constraintTop_toBottomOf="@id/imgView_history5" />
 
             <TextView
                 android:id="@+id/txtView_history6"
-                android:layout_width="360dp"
-                android:layout_height="37dp"
+                android:layout_width="366dp"
+                android:layout_height="44dp"
                 android:layout_marginTop="5dp"
-                app:layout_constraintEnd_toEndOf="@+id/imgView_history6"
-                app:layout_constraintStart_toStartOf="@+id/imgView_history6"
-                app:layout_constraintTop_toBottomOf="@id/imgView_history6"
+                android:gravity="center_horizontal"
+                android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 android:textStyle="bold"
-                android:textAlignment="center"
-                android:gravity="center_horizontal"/>
+                app:layout_constraintEnd_toEndOf="@+id/imgView_history6"
+                app:layout_constraintStart_toStartOf="@+id/imgView_history6"
+                app:layout_constraintTop_toBottomOf="@id/imgView_history6" />
 
             <TextView
                 android:id="@+id/txtView_history7"
