--- a/app/src/main/res/layout/activity_p_home.xml
+++ b/app/src/main/res/layout/activity_p_home.xml
@@ -130,7 +130,7 @@
                 android:layout_width="35dp"
                 android:layout_height="19dp"
                 android:fontFamily="@font/gmarketmedium"
-                android:text="0%"
+                android:text=""
                 android:textColor="#4A4A4A"
                 android:textSize="20sp"
                 android:layout_marginTop="65dp"
