--- a/app/src/main/res/layout/navi_header.xml
+++ b/app/src/main/res/layout/navi_header.xml
@@ -20,14 +20,17 @@
         android:contentDescription="navi_header"
         android:paddingTop="5dp"
         android:paddingLeft="5dp"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@mipmap/ic_launcher_round"
+        android:background="@drawable/img_shape"
+        />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="5dp"
         android:paddingLeft="5dp"
-        android:text="Prezzy PoP!"
+        android:text="PrezzyPoP"
+        android:fontFamily="@font/gmarketmedium"
         android:textSize="15dp"
         android:textStyle="bold"
         android:textColor="@color/black"
@@ -37,8 +40,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="5dp"
-        android:text="Subtitle"
-        android:textSize="15dp"
+        android:text=":Let's Pop"
+        android:fontFamily="@font/duru_sans"
+        android:textSize="13dp"
         android:textStyle="bold"
         android:textColor="@color/black"
         android:id="@+id/textView"/>
